fix(ui5-card-header): truncate long single-word description
Fixes: #8245

--- a/packages/main/src/themes/CardHeader.css
+++ b/packages/main/src/themes/CardHeader.css
@@ -140,7 +140,7 @@
 	text-align: start;
 	text-overflow: ellipsis;
 	white-space: normal;
-	word-wrap: break-word;
+	overflow-wrap: anywhere;
 	overflow: hidden;
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
